--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <packaging>jar</packaging>
 	<name>plugins/Th_Nucleus_Cytoplasm</name>
 	<description>
-            ORF1P intensity in nucleus and cytoplasm of Th cells
+            561-channel intensity in nucleus and cytoplasm of Th cells
         </description>
 
 	<developers>
