--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,1 +1,1 @@
-Plugins>CIRB>Prochiantz>Olivia,"Th Nucleus Cytoplasm v2", Th_Nucleus_Cytoplasm
+Plugins>CIRB>Fuchs>Olivia,"Th Nucleus Cytoplasm v2", Th_Nucleus_Cytoplasm
